--- a/SIENI/SIENI-web/src/main/webapp/view/gestionCurso/crear.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/gestionCurso/crear.xhtml
@@ -21,36 +21,35 @@
                 <p:dialog widgetVar="dlgAyuda1" modal="true" appendTo="@(body)" header="Ayuda">
                     <p:outputLabel value="Esta ayuda sirve un monton registrar"/>
                 </p:dialog>
-                <p:panelGrid columns="2" class="Container50 Responsive" id="p1">
+                <p:panelGrid columns="4" class="Container100 Responsive" id="p1">
                     <p:outputLabel for="nombre"  value="Nombre del Curso:  " class=" Responsive"></p:outputLabel>
-                    <p:inputText id="nombre" class=" Responsive" value="#{gestionCursoController.cursoNuevo.crNombre}"><f:validateLength minimum="10" maximum="50" /></p:inputText>
+                    <p:inputText tabindex="1" id="nombre" class=" Responsive" value="#{gestionCursoController.cursoNuevo.crNombre}"><f:validateLength minimum="10" maximum="50" /></p:inputText>
                     <p:outputLabel for="capacidad" value="Capacidad: " class=" Responsive"></p:outputLabel>
-                    <p:spinner id="capacidad" class=" Responsive" value="#{gestionCursoController.cursoNuevo.crCapacidad}" max="999" min="1"></p:spinner>
+                    <p:spinner tabindex="2" id="capacidad" class=" Responsive" value="#{gestionCursoController.cursoNuevo.crCapacidad}" max="999" min="1"></p:spinner>
                     <p:outputLabel for="docente" value="Docente: " class="  Responsive"></p:outputLabel>
-                    <p:selectOneMenu id="docente" class=" Responsive" value="#{gestionCursoController.idDocente}">
+                    <p:selectOneMenu tabindex="3" id="docente" class=" Responsive" value="#{gestionCursoController.idDocente}" filter="true" filterMatchMode="contains" required="true">
                         <f:selectItems itemValue ="#{docente.idDocente}" itemLabel="#{docente.nombreCompleto}" value="#{gestionCursoController.docentesList}" var="docente" />
                     </p:selectOneMenu>
-                </p:panelGrid>
-                <p:panelGrid columns="2" class="Container50 Responsive" id="p2">
+                
                     <p:outputLabel for="grado" value="Grado: " class=" Responsive" ></p:outputLabel>
-                    <p:selectOneMenu id="grado" filter="true" filterMatchMode="contains" value="#{gestionCursoController.idGrado}" valueChangeListener="#{gestionCursoController.getSeccionesGrado}">
+                    <p:selectOneMenu tabindex="4" id="grado" filter="true" filterMatchMode="contains" value="#{gestionCursoController.idGrado}" valueChangeListener="#{gestionCursoController.getSeccionesGrado}" required="true">
                         <f:selectItems itemValue="#{grado.idGrado}" itemLabel="#{grado.grNombre}" value="#{gestionCursoController.gradoList}" var="grado"></f:selectItems>
                         <p:ajax event="valueChange" update="seccion,materia"/>
                     </p:selectOneMenu>
                     <p:outputLabel for="seccion" value="Sección del grado: " class="  Responsive"></p:outputLabel>
-                    <p:selectOneMenu id="seccion" value="#{gestionCursoController.idSeccion}">
+                    <p:selectOneMenu tabindex="5" id="seccion" value="#{gestionCursoController.idSeccion}"  filter="true" filterMatchMode="contains" required="true">
                         <f:selectItems itemValue="#{seccion.idSeccion}" itemLabel="#{seccion.scDescripcion}" value="#{gestionCursoController.seccionList}" var="seccion"></f:selectItems>
                     </p:selectOneMenu>
                     <p:outputLabel for="materia" value="Materia: " class="  Responsive"></p:outputLabel>
-                    <p:selectOneMenu id="materia" class=" Responsive" value="#{gestionCursoController.idMateria}">
+                    <p:selectOneMenu tabindex="6" id="materia" class=" Responsive" value="#{gestionCursoController.idMateria}" filter="true" filterMatchMode="contains" required="true" >
                         <f:selectItems itemValue ="#{materia.idMateria}" itemLabel="#{materia.maNombre}" value="#{gestionCursoController.materiaList}" var="materia" />
                     </p:selectOneMenu>
                 </p:panelGrid>
                 <div class="EmptyBox20"></div>
                 <div class="Container100">
-                    <p:commandButton value="Guardar" action="#{gestionCursoController.guardar()}" update="p1" />
+                    <p:commandButton tabindex="7" value="Guardar" action="#{gestionCursoController.guardar()}" update="p1" />
                     <p:commandButton value="Limpiar" immediate="true">
-                        <p:ajax update="p1" resetValues="true" />
+                        <p:ajax update="p1" resetValues="true" oncomplete="configurarEnterTab()"/>
                     </p:commandButton>
                     <p:commandButton value="Cancelar" immediate="true">
                         <p:ajax update="p1" resetValues="true" listener="#{gestionCursoController.setIndexMenu(0)}"/>
