--- a/SIENI/SIENI-web/src/main/webapp/view/gestionCurso/editar.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/gestionCurso/editar.xhtml
@@ -25,33 +25,33 @@
                     <div class="EmptyBox20"></div>
                     <p:panelGrid columns="4" class="Container100 Responsive" id="p1">
                         <p:outputLabel for="mod_nombre"  value="Nombre del Curso:  " class=" Responsive"></p:outputLabel>
-                        <p:inputText id="mod_nombre" class=" Responsive" value="#{gestionCursoController.cursoModifica.crNombre}"/>
+                        <p:inputText tabindex="1" id="mod_nombre" class=" Responsive" value="#{gestionCursoController.cursoModifica.crNombre}"><f:validateLength minimum="10" maximum="50" /></p:inputText>
                         <p:outputLabel for="mod_capacidad" value="Capacidad: " class=" Responsive"></p:outputLabel>
-                        <p:spinner id="mod_capacidad" class=" Responsive" value="#{gestionCursoController.cursoModifica.crCapacidad}" max="999" min="1"></p:spinner>
+                        <p:spinner tabindex="2" id="mod_capacidad" class=" Responsive" value="#{gestionCursoController.cursoModifica.crCapacidad}" max="999" min="1"></p:spinner>
                         <p:outputLabel for="mod_docente" value="Docente: " class="  Responsive"></p:outputLabel>
-                        <p:selectOneMenu id="mod_docente" class=" Responsive" value="#{gestionCursoController.cursoModifica.idDocente.idDocente}">
+                        <p:selectOneMenu tabindex="3" id="mod_docente" class=" Responsive" value="#{gestionCursoController.cursoModifica.idDocente.idDocente}" filter="true" filterMatchMode="contains" required="true">
                             <f:selectItems itemValue ="#{docente.idDocente}" itemLabel="#{docente.nombreCompleto}" value="#{gestionCursoController.docentesModificaList}" var="docente" />
                         </p:selectOneMenu>
                     
                         <p:outputLabel for="mod_grado" value="Grado: " class=" Responsive" ></p:outputLabel>
-                        <p:selectOneMenu id="mod_grado" filter="true" filterMatchMode="contains" value="#{gestionCursoController.cursoModifica.idGrado.idGrado}">
+                        <p:selectOneMenu tabindex="4" id="mod_grado" filter="true" filterMatchMode="contains" value="#{gestionCursoController.cursoModifica.idGrado.idGrado}" required="true">
                             <f:selectItems itemValue="#{grado.idGrado}" itemLabel="#{grado.grNombre}" value="#{gestionCursoController.gradoModificaList}" var="grado" ></f:selectItems>
                             <p:ajax event="valueChange" update="mod_seccion"/>
                         </p:selectOneMenu>
                         <p:outputLabel for="mod_seccion" value="Sección del grado: " class="  Responsive"></p:outputLabel>
-                        <p:selectOneMenu id="mod_seccion" value="#{gestionCursoController.cursoModifica.idSeccion.idSeccion}">
+                        <p:selectOneMenu tabindex="5" id="mod_seccion" value="#{gestionCursoController.cursoModifica.idSeccion.idSeccion}" filter="true" filterMatchMode="contains" required="true">
                             <f:selectItems itemValue="#{seccion.idSeccion}" itemLabel="#{seccion.scDescripcion}" value="#{gestionCursoController.seccionModificaList}" var="seccion"></f:selectItems>
                         </p:selectOneMenu>
                         <p:outputLabel for="mod_materia" value="Materia: " class="  Responsive"></p:outputLabel>
-                        <p:selectOneMenu id="mod_materia" class=" Responsive" value="#{gestionCursoController.cursoModifica.idMateria.idMateria}">
+                        <p:selectOneMenu tabindex="6" id="mod_materia" class=" Responsive" value="#{gestionCursoController.cursoModifica.idMateria.idMateria}" filter="true" filterMatchMode="contains" required="true">
                             <f:selectItems itemValue ="#{materia.idMateria}" itemLabel="#{materia.maNombre}" value="#{gestionCursoController.materiaModificaList}" var="materia" />
                         </p:selectOneMenu>
                     </p:panelGrid>
                     <div class="EmptyBox20"></div>
                 <div class="Container100">
-                    <p:commandButton value="Guardar" action="#{gestionCursoController.guardarModifica()}" update="p1" />
+                    <p:commandButton tabindex="7" value="Guardar" action="#{gestionCursoController.guardarModifica()}" update="p1" />
                     <p:commandButton value="Limpiar" immediate="true">
-                        <p:ajax update="p1" resetValues="true" />
+                        <p:ajax update="p1" resetValues="true" oncomplete="configurarEnterTab()"/>
                     </p:commandButton>
                     <p:commandButton value="Cancelar" immediate="true">
                         <p:ajax update="p1" resetValues="true" listener="#{gestionCursoController.setIndexMenu(0)}"/>
