--- a/SIENI/SIENI-web/src/main/webapp/view/gestionCurso/gestionMaterias/editar.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/gestionCurso/gestionMaterias/editar.xhtml
@@ -45,8 +45,10 @@
                 <div class="EmptyBox20"></div>
                 <div class="Container100 Responsive">
                     <p:commandButton value="Guardar" action="#{gestionMateriasController.guardarModifica()}"/>
-                    <p:commandButton value="Limpiar"/>
-                    <p:commandButton value="Cancelar"/>
+<!--                    <p:commandButton value="Limpiar"/>-->
+                    <p:commandButton value="Regresar" immediate="true">
+                        <p:ajax resetValues="true" listener="#{gestionMateriasController.setIndexMenu(0)}"/>
+                    </p:commandButton>
                     <p:commandButton id="otrasOpciones" value="Otras opciones" type="button" icon="ui-icon-extlink" />
                     <p:tieredMenu overlay="true" trigger="otrasOpciones" my="left top" at="left bottom" style="width:200px">
                         <p:menuitem value="Gestionar Curso" url="#{siteUrls.gestionarCursos}" >    
