--- a/SIENI/SIENI-web/src/main/webapp/view/gestionCurso/gestionMaterias/index.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/gestionCurso/gestionMaterias/index.xhtml
@@ -41,7 +41,17 @@
                         #{car.idGrado.grNombre}
                     </p:column>
                     <p:column headerText="Estado" filterBy="#{car.maEstado}" filterable="true" filterMatchMode="contains">
-                        #{car.maEstado}
+                        <c:choose>
+                            <c:when test="${car.maEstado == A}">
+                                DISPONIBLE
+                            </c:when>
+                            <c:when test="${car.maEstado == N}">
+                                NO DISPONIBLE
+                            </c:when>
+                            <c:otherwise>
+                                
+                            </c:otherwise>
+                        </c:choose>
                     </p:column>
 <!--                    <p:column headerText="Coordinador" filterBy="#{car.maCoordinador}" filterable="true" filterMatchMode="contains">
                     #{car.maCoordinador}
@@ -61,98 +71,8 @@
                 </p:dataTable>
                 <div class="EmptyBox20"></div>
                 <p:commandButton value="Adicionar Materia" action="#{gestionMateriasController.setIndexMenu(1)}"></p:commandButton>
-                <p:commandButton value="Refrescar"></p:commandButton>
+                <p:commandButton value="Refrescar" action="#{gestionMateriasController.refresh()}" update="consulta"></p:commandButton>
             </h:form>
         </p:panel>
-        <!--            </p:tab>-->
-        <!--            <p:tab title="Registrar Materia">
-                        <h:form>
-                            <p:dialog widgetVar="dlgAyuda" modal="true" appendTo="@(body)" header="Ayuda">
-                                <p:outputLabel value="Esta ayuda sirve un monton"/>
-                            </p:dialog>
-                            <i class="icon-question Fs25 Red" style="cursor: pointer" onclick="PF('dlgAyuda').show();"></i>
-                            <div class="EmptyBox20"></div>
-                            <p:panelGrid columns="2" class="Container50 Responsive">
-                                <p:outputLabel  value="Nombre: " class=" Responsive"></p:outputLabel>
-                                <p:inputText class=" Responsive" value="#{formatoPantallas.campo100}"></p:inputText>
-                                <p:outputLabel value="Estado: " class=" Responsive"></p:outputLabel>
-                                <p:selectOneMenu  class=" Responsive" value="#{formatoPantallas.campo15}">
-                                    <f:selectItem itemValue ="1" itemLabel="#{formatoPantallas.campo15}"/>
-                                    <f:selectItem itemValue="0" itemLabel="No Disponible"/>
-                                </p:selectOneMenu>
-                            </p:panelGrid>
-                            <p:panelGrid columns="2" class="Container50 Responsive">
-                                <p:outputLabel  value="Coordinador: " class=" Responsive"></p:outputLabel>
-                                <p:selectOneMenu  class=" Responsive" value="#{formatoPantallas.campo300}">
-                                    <f:selectItem itemValue ="0" itemLabel="#{formatoPantallas.campo300} "/>
-                                    <f:selectItem itemValue ="1" itemLabel="Carlos"/>
-                                </p:selectOneMenu>
-                                <p:outputLabel value="Turno: " class=" Responsive"></p:outputLabel>
-                                <p:selectOneMenu class=" Responsive" value="#{formatoPantallas.campo15}">
-                                    <f:selectItem itemValue ="0" itemLabel="#{formatoPantallas.campo15}"/>
-                                    <f:selectItem itemValue ="1" itemLabel="Vespertino"/>
-                                </p:selectOneMenu>   
-                            </p:panelGrid>
-                            <div class="EmptyBox20"></div>
-                            <div class="Container100 Responsive">
-                                <p:commandButton value="Guardar"/>
-                                <p:commandButton value="Limpiar"/>
-                                <p:commandButton value="Cancelar"/>
-                                <p:splitButton value="Otras Opciones" action="#">
-                                    <p:menuitem value="Gestionar Secciones">    
-                                    </p:menuitem>
-                                    <p:menuitem value="Programación de clases">    
-                                    </p:menuitem>
-                                    <p:menuitem value="Gestionar Clases">
-                                    </p:menuitem>
-                                </p:splitButton>
-                            </div>
-                        </h:form>
-                    </p:tab>-->
-        <!--            <p:tab title="Modificar Materia">
-                        <h:form>
-                            <p:dialog widgetVar="dlgAyuda" modal="true" appendTo="@(body)" header="Ayuda">
-                                <p:outputLabel value="Esta ayuda sirve un monton"/>
-                            </p:dialog>
-                            <i class="icon-question Fs25 Red" style="cursor: pointer" onclick="PF('dlgAyuda').show();"></i>
-                            <div class="EmptyBox20"></div>
-                            <p:panelGrid columns="2" class="Container50 Responsive">
-                                <p:outputLabel  value="Nombre: " class=" Responsive"></p:outputLabel>
-                                <p:inputText class=" Responsive" value="#{formatoPantallas.campo100}"></p:inputText>
-                                <p:outputLabel value="Estado: " class=" Responsive"></p:outputLabel>
-                                <p:selectOneMenu  class=" Responsive" value="#{formatoPantallas.campo15}">
-                                    <f:selectItem itemValue ="1" itemLabel="#{formatoPantallas.campo15}"/>
-                                    <f:selectItem itemValue="0" itemLabel="No Disponible"/>
-                                </p:selectOneMenu>
-                            </p:panelGrid>
-                            <p:panelGrid columns="2" class="Container50 Responsive">
-                                <p:outputLabel  value="Coordinador: " class=" Responsive"></p:outputLabel>
-                                <p:selectOneMenu  class=" Responsive" value="#{formatoPantallas.campo300}">
-                                    <f:selectItem itemValue ="0" itemLabel="#{formatoPantallas.campo300} "/>
-                                    <f:selectItem itemValue ="1" itemLabel="Carlos"/>
-                                </p:selectOneMenu>
-                                <p:outputLabel value="Turno: " class=" Responsive"></p:outputLabel>
-                                <p:selectOneMenu class=" Responsive" value="#{formatoPantallas.campo15}">
-                                    <f:selectItem itemValue ="0" itemLabel="#{formatoPantallas.campo15}"/>
-                                    <f:selectItem itemValue ="1" itemLabel="Vespertino"/>
-                                </p:selectOneMenu>   
-                            </p:panelGrid>
-                            <div class="EmptyBox20"></div>
-                            <div class="Container100 Responsive">
-                                <p:commandButton value="Guardar"/>
-                                <p:commandButton value="Limpiar"/>
-                                <p:commandButton value="Cancelar"/>
-                                <p:splitButton value="Otras Opciones" action="#">
-                                    <p:menuitem value="Gestionar Secciones">    
-                                    </p:menuitem>
-                                    <p:menuitem value="Programación de clases">    
-                                    </p:menuitem>
-                                    <p:menuitem value="Gestionar Clases">
-                                    </p:menuitem>
-                                </p:splitButton>
-                            </div>
-                        </h:form>
-                    </p:tab>-->
-        <!--        </p:tabView>-->
     </ui:define>
 </ui:composition>
