--- a/SIENI/SIENI-web/src/main/webapp/view/gestionCurso/gestionEvaluaciones/crear.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/gestionCurso/gestionEvaluaciones/crear.xhtml
@@ -28,7 +28,7 @@
                         <p:outputLabel  value="Título: " class="Contanier10 Responsive"></p:outputLabel>
                         <p:inputText value="#{gestionarEvaluacionController.evaluacionNuevo.evNombre}" ></p:inputText>
                          <p:outputLabel for="Curso" value="Curso: " class=" Responsive" ></p:outputLabel>
-                         <p:selectOneMenu id="Curso" filter="true" filterMatchMode="contains" value="#{gestionarEvaluacionController.idCurso}" valueChangeListener="#{gestionCursoController.getSeccionesGrado}">
+                         <p:selectOneMenu id="Curso" filter="true" filterMatchMode="contains" value="#{gestionarEvaluacionController.idCurso}" >
                              <f:selectItems itemValue="#{curso.idCurso}" itemLabel="#{curso.crNombre}" value="#{gestionarEvaluacionController.cursoList}" var="curso"></f:selectItems>
                         </p:selectOneMenu>
                         <p:outputLabel  value="Ponderacion de la evaluación (%): " class="Contanier10 Responsive"></p:outputLabel>
