--- a/SIENI/SIENI-web/src/main/webapp/resources/reportes/rtpRendimiento.jrxml
+++ b/SIENI/SIENI-web/src/main/webapp/resources/reportes/rtpRendimiento.jrxml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!-- Created with Jaspersoft Studio version 6.1.0.final using JasperReports Library version 6.1.0  -->
-<!-- 2015-10-30T21:51:46 -->
+<!-- 2015-11-17T20:42:56 -->
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="rptAlumnos" pageWidth="612" pageHeight="792" columnWidth="572" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" uuid="075ed306-8898-40c6-b065-aa7be29049d9">
 	<property name="com.jaspersoft.studio.data.defaultdataadapter" value="bd_sieni"/>
 	<property name="com.jaspersoft.studio.layout" value="com.jaspersoft.studio.editor.layout.HorizontalRowLayout"/>
@@ -293,7 +293,7 @@
 		<band height="50">
 			<staticText>
 				<reportElement x="60" y="13" width="90" height="20" uuid="b94b28dd-dd7d-49cb-ad83-96eb93e8c053"/>
-				<text><![CDATA[Total de Alumnos:]]></text>
+				<text><![CDATA[Total de Registros:]]></text>
 			</staticText>
 			<textField>
 				<reportElement x="154" y="13" width="100" height="20" uuid="3e089dda-3c39-40af-bf73-b822f8c0c473"/>
