correccion de problemas de integracion en carga de informacion, y correccion de bug en clases interactivas

--- a/SIENI/SIENI-web/src/main/webapp/view/gestionAnioEscolar/index.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/gestionAnioEscolar/index.xhtml
@@ -44,7 +44,7 @@
                     <p:column headerText="Fecha Fin" filterBy="#{formatUtils.getFormatedDate(car.aeFin)}" filterMatchMode="contains" filterable="true">
                         #{formatUtils.getFormatedDate(car.aeFin)}
                     </p:column>
-                    <p:column headerText="Estado" filterBy="#{car.aeEstado}" filterMatchMode="contains" filterable="true">
+                    <p:column headerText="Estado" filterBy="#{car.estado}" filterMatchMode="contains" filterable="true">
                         #{car.estado}
                     </p:column>
                     <p:column headerText="Acciones">                    
