--- a/SIENI/SIENI-web/src/main/webapp/view/gestionCurso/gestionClase/claseVideoAlmacenada/configurar.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/gestionCurso/gestionClase/claseVideoAlmacenada/configurar.xhtml
@@ -57,6 +57,13 @@
                     }
                 }
             }
+            function resetComps() {
+                if (invertir) {
+                    invertir = undefined;
+                }
+                comps = [];
+            }
+
             function ocultarTodos() {
                 invertir = true;
                 comps = [];
@@ -115,6 +122,7 @@
                     </p:column>
                 </p:dataTable>
                 <p:commandButton value="Ocultar Todos Los Componentes"  action="#{gestionVideoClaseController.ocultarTodos()}" update="mostrar" oncomplete="ocultarTodos()"></p:commandButton> 
+                <p:commandButton value="Mostrar Todos Los Componentes"  action="#{gestionVideoClaseController.mostrarTodos()}" update="mostrar,clase" oncomplete="resetComps()"></p:commandButton> 
                 <p:dialog widgetVar="dlgConfPantalla" header="Configurar Pantalla de Clase" modal="true">
                     <p:outputLabel value="Alto" class="TexAlCenter" ></p:outputLabel>
                     <p:spinner value="#{gestionVideoClaseController.claseConfig.clAlto}" max="1080" stepFactor="100"></p:spinner>
