--- a/SIENI/SIENI-web/src/main/webapp/view/gestionCurso/gestionCompInteract/index.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/gestionCurso/gestionCompInteract/index.xhtml
@@ -62,7 +62,7 @@
                         </p:column>                        
                     </p:column>
                 </p:dataTable>
-                <p:commandButton value="Adicionar Componente Interactivo" action="#{gestionComponentesInteractivosController.setIndexMenu(1)}"></p:commandButton>
+                <p:commandButton value="Adicionar Componente Interactivo" action="#{gestionComponentesInteractivosController.nuevo()}"></p:commandButton>
                 <p:commandButton value="Refrescar" action="#{gestionComponentesInteractivosController.refresh()}" update="consulta"></p:commandButton>
             </h:form>
         </p:panel>
