--- a/SIENI/SIENI-web/src/main/webapp/view/gestionCurso/gestionClase/gestionPlantillas/configurar.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/gestionCurso/gestionClase/gestionPlantillas/configurar.xhtml
@@ -41,7 +41,7 @@
                              paginator="true" rows="5"
                              paginatorTemplate="{CurrentPageReport}  {FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink} {RowsPerPageDropdown}"
                              rowsPerPageTemplate="10,20,40"
-                             reflow="true">
+                             reflow="true" draggableRows="true">
                     <p:column headerText="Elemento de Plantilla">
                         #{car.idTipoElemPlantilla.teDescripcion}
                     </p:column>
