correcion de reporte de rendimiento

--- a/SIENI/SIENI-web/src/main/webapp/resources/reportes/rtpRendimiento.jrxml
+++ b/SIENI/SIENI-web/src/main/webapp/resources/reportes/rtpRendimiento.jrxml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!-- Created with Jaspersoft Studio version 6.1.0.final using JasperReports Library version 6.1.0  -->
-<!-- 2015-11-17T20:42:56 -->
+<!-- 2015-11-24T20:26:59 -->
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="rptAlumnos" pageWidth="612" pageHeight="792" columnWidth="572" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" uuid="075ed306-8898-40c6-b065-aa7be29049d9">
 	<property name="com.jaspersoft.studio.data.defaultdataadapter" value="bd_sieni"/>
 	<property name="com.jaspersoft.studio.layout" value="com.jaspersoft.studio.editor.layout.HorizontalRowLayout"/>
@@ -133,7 +133,7 @@
 				<textElement textAlignment="Center">
 					<font isBold="true"/>
 				</textElement>
-				<text><![CDATA[Tipo de Evaluacion]]></text>
+				<text><![CDATA[Alumnos]]></text>
 			</staticText>
 			<staticText>
 				<reportElement x="312" y="10" width="80" height="30" uuid="d6778a95-b1fe-4a1d-a65a-b0e6d799b2c7"/>
@@ -146,7 +146,7 @@
 				<textElement textAlignment="Center">
 					<font isBold="true"/>
 				</textElement>
-				<text><![CDATA[% Participacion]]></text>
+				<text><![CDATA[Tipo de Evaluacion]]></text>
 			</staticText>
 			<staticText>
 				<reportElement x="392" y="10" width="55" height="30" uuid="ddeef255-87fa-48ec-9517-12f0a0c74c3c"/>
