--- a/SIENI/SIENI-web/src/main/webapp/view/gestionAnioEscolar/matricula/crear.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/gestionAnioEscolar/matricula/crear.xhtml
@@ -24,6 +24,7 @@
                     <p:inputText id="carnet" value="#{gestionMatriculaController.alumno.alCarnet}" disabled="true"></p:inputText>
                     <p:outputLabel for="nombre" value="Nombre: " class=" Responsive"></p:outputLabel>
                     <p:selectOneMenu id="nombre" filter="true" filterMatchMode="contains" value="#{gestionMatriculaController.idAlumno}" valueChangeListener="#{gestionMatriculaController.getCarnetAlumno}" >
+                        <f:selectItem itemLabel="Seleccione alumno" itemDisabled="true"/>
                         <f:selectItems itemValue="#{alumnos.idAlumno}" itemLabel="#{alumnos.nombreCompleto}" value="#{gestionMatriculaController.alumnosList}" var="alumnos"></f:selectItems>
                         <p:ajax event="valueChange" update="carnet"/>
                     </p:selectOneMenu>
