--- a/SIENI/SIENI-web/src/main/webapp/view/gestionCurso/gestionMaterias/crear.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/gestionCurso/gestionMaterias/crear.xhtml
@@ -19,19 +19,20 @@
         <div class="EmptyBox5"></div>
         <p:panel>
             <h:form enctype="multipart/form-data" >
-                <!--                <p:dialog widgetVar="dlgAyuda" modal="true" appendTo="@(body)" header="Ayuda">
-                                    <p:outputLabel value="Esta ayuda sirve un monton"/>
-                                </p:dialog>
-                                <i class="icon-question Fs25 Red" style="cursor: pointer" onclick="PF('dlgAyuda').show();"></i>-->
                 <div class="EmptyBox20"></div>
                 <p:panelGrid columns="2" class="Container50 Responsive">
                     <p:outputLabel  value="Nombre: " class=" Responsive"></p:outputLabel>
                     <p:selectOneMenu id="nombre" class=" Responsive" value="#{gestionMateriasController.materiaNuevo.maNombre}">
                         <f:selectItems itemValue="#{nombre.catNombre}" itemLabel="#{nombre.catNombre}" value="#{gestionMateriasController.catmateriaList}" var="nombre"></f:selectItems>
                     </p:selectOneMenu>
-                    <p:outputLabel  value="Grado: " class=" Responsive"></p:outputLabel>
-                    <p:selectOneMenu class=" Responsive" value="#{gestionMateriasController.materiaNuevo.idGrado}" converter="grado">
-                        <f:selectItems itemValue="#{grado}" itemLabel="#{grado.grNombre}" value="#{gestionMateriasController.gradoList}" var="grado"></f:selectItems>
+                    <p:outputLabel  value="Coordinador: " class=" Responsive"></p:outputLabel>
+                    <p:selectOneMenu id="docente" class=" Responsive" value="#{gestionMateriasController.materiaNuevo.maCoordinador}">
+                        <f:selectItems itemValue ="#{docente.idDocente}" itemLabel="#{docente.nombreCompleto}" value="#{gestionMateriasController.docentesList}" var="docente" />
+                    </p:selectOneMenu>
+                    <p:outputLabel value="Turno: " class=" Responsive"></p:outputLabel>
+                    <p:selectOneMenu class=" Responsive" value="#{gestionMateriasController.materiaNuevo.maTurno}">
+                        <f:selectItem itemValue ="MATUTINO" itemLabel="MATUTINO"/>
+                        <f:selectItem itemValue ="VESPERTINO" itemLabel="VESPERTINO"/>
                     </p:selectOneMenu>
                 </p:panelGrid>
                 <p:panelGrid columns="2" class="Container50 Responsive">
@@ -40,22 +41,14 @@
                         <f:selectItem itemValue ="A" itemLabel="DISPONIBLE"/>
                         <f:selectItem itemValue="N" itemLabel="NO DISPONIBLE"/>
                     </p:selectOneMenu>
-                    <p:outputLabel value="Turno: " class=" Responsive"></p:outputLabel>
-                    <p:selectOneMenu class=" Responsive" value="#{gestionMateriasController.materiaNuevo.maTurno}">
-                        <f:selectItem itemValue ="MATUTINO" itemLabel="MATUTINO"/>
-                        <f:selectItem itemValue ="VESPERTINO" itemLabel="VESPERTINO"/>
-                    </p:selectOneMenu>   
+                    <p:outputLabel  value="Grado: " class=" Responsive"></p:outputLabel>
+                    <p:selectOneMenu class=" Responsive" value="#{gestionMateriasController.materiaNuevo.idGrado}" converter="grado">
+                        <f:selectItems itemValue="#{grado}" itemLabel="#{grado.grNombre}" value="#{gestionMateriasController.gradoList}" var="grado"></f:selectItems>
+                    </p:selectOneMenu>
                 </p:panelGrid>
-                <!--                <p:panelGrid columns="2" class="Container50 Responsive">
-                                    <p:outputLabel  value="Coordinador: " class=" Responsive"></p:outputLabel>
-                                    <p:selectOneMenu class=" Responsive" value="#{gestionMateriasController.materiaNuevo.maCoordinador}">
-                                        <f:selectItems itemValue="#{gestionMateriasController.materiaNuevo.maCoordinador}" itemLabel="#{docente.nombreCompleto}" value="#{gestionMateriasController.docentesList}" var="docente"></f:selectItems>
-                                    </p:selectOneMenu>
-                                </p:panelGrid>-->
                 <div class="EmptyBox20"></div>
                 <div class="Container100 Responsive">
                     <p:commandButton value="Guardar" action="#{gestionMateriasController.guardar()}"/>
-<!--                    <p:commandButton value="Limpiar" immediate="true"/>-->
                     <p:commandButton value="Regresar" immediate="true">
                         <p:ajax resetValues="true" listener="#{gestionMateriasController.setIndexMenu(0)}"/>
                     </p:commandButton>
