--- a/SIENI/SIENI-web/src/main/webapp/view/gestionCurso/index.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/gestionCurso/index.xhtml
@@ -53,7 +53,7 @@
                        
                         <p:commandLink action="#{gestionCursoController.ver(car)}"><i class="icon-visibility1 Fs30 Red MarRight10" title="Ver Expediente" ></i></p:commandLink>
                             <p:commandLink action="#{gestionCursoController.modificar(car)}" ><i class="icon-compose Fs25 Red MarRight10" title="Modificar Expediente" ></i></p:commandLink>
-                            <p:commandLink action="#{gestionCursoController.gestionarCursoAlumno(car)}" rendered="#{!gestionarEvaluacionController.validaAlumno()}" ><i class="icon-portfolio Fs25 Red MarRight10" title="Agregar items" ></i></p:commandLink>
+                            <p:commandLink action="#{gestionCursoController.gestionarCursoAlumno(car)}" rendered="#{!gestionarEvaluacionController.validaAlumno()}" ><i class="icon-portfolio Fs25 Red MarRight10" title="Inscribir alumnos" ></i></p:commandLink>
                             <p:commandLink action="#{gestionCursoController.eliminar(car)}" onclick="PF('dlgEliminar').show();" immediate="true" >
                                 <i class="icon-close Fs25 Red MarRight10" title="Eliminar Expediente"></i>
                             </p:commandLink>
