--- a/SIENI/SIENI-web/src/main/webapp/view/gestionCurso/gestionClase/programacionClase/index.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/gestionCurso/gestionClase/programacionClase/index.xhtml
@@ -62,7 +62,7 @@
                     </p:commandLink>
                 </p:column>
             </p:dataTable>
-            <p:commandButton value="Adicionar Programación" action="#{programacionClasesController.setIndexMenu(1)}"  rendered="#{loginController.mostrarA('1,2')}"></p:commandButton>
+            <p:commandButton value="Adicionar Programación" action="#{programacionClasesController.nuevoD()}"  rendered="#{loginController.mostrarA('1,2')}"></p:commandButton>
             <p:commandButton value="Refrescar" action="#{programacionClasesController.refresh()}" update="consulta"></p:commandButton>
         </h:form>
     </ui:define>
