--- a/SIENI/SIENI-web/src/main/webapp/view/gestionCurso/gestionClase/claseInteractiva/configurarInterac.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/gestionCurso/gestionClase/claseInteractiva/configurarInterac.xhtml
@@ -11,7 +11,7 @@
             <p:menuitem value="Gestionar Curso" url="#"/>
             <p:menuitem value="Gestionar Clase" url="#"/>
             <p:menuitem value="Clase Interactiva" url="#{siteUrls.claseInteractiva}"/>
-            <p:menuitem value="Configuración de Interaccion Entre Componentes" url="#"/>
+            <p:menuitem value="Configuración de Interaccion Entre Componentes: #{gestionClaseInteracController.claseConfig.clTema}" url="#"/>
         </p:breadCrumb>
         <i class="icon-question Fs25 Red Container2 ui-breadcrumb" style="cursor: pointer;" onclick="PF('dlgAyuda').show();"></i>
     </ui:define>
@@ -23,6 +23,7 @@
                     <p:outputLabel value="Esta ayuda sirve un monton"/>
                 </p:dialog>                
                 <div class="EmptyBox5"></div>
+                <p:outputLabel value="Curso: #{gestionClaseInteracController.claseConfig.idCurso.crNombre}"></p:outputLabel>                
                 <p:tabView id="tabVie">
                     <p:tab title="Interacción única">
                         <p:panelGrid columns="4" id="panel">
