--- a/SIENI/SIENI-web/src/main/webapp/view/gestionCurso/gestionClase/claseInteractiva/ver.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/gestionCurso/gestionClase/claseInteractiva/ver.xhtml
@@ -10,7 +10,7 @@
             <p:menuitem value="Home" url="/"/>
             <p:menuitem value="Gestionar Curso" url="#"/>
             <p:menuitem value="Gestionar Clase" url="#"/>
-            <p:menuitem value="Consulta de Clase Interactiva" url="#{siteUrls.claseInteractiva}"/>
+            <p:menuitem value="Consulta de Clase Interactiva:#{gestionClaseInteracController.claseConfig.clTema}" url="#{siteUrls.claseInteractiva}"/>
             <p:separator />
         </p:breadCrumb>
     </ui:define>
@@ -20,6 +20,7 @@
             <script type="text/javascript">
                 #{gestionClaseInteracController.funcionJS}
             </script>
+            <p:outputLabel value="Curso: #{gestionClaseInteracController.claseConfig.idCurso.crNombre}"></p:outputLabel>
             <p:remoteCommand name="refrescarClase" update="clase"></p:remoteCommand>
             <p:tabView id="clase" activeIndex="#{gestionClaseInteracController.idElemenActive}" style="height: #{gestionClaseInteracController.claseConfig.clAlto+90}px;width: #{gestionClaseInteracController.claseConfig.clAncho+156}px"> 
                 <p:ajax event="tabChange" listener="#{gestionClaseInteracController.updatePuntoCtrlSeleccionados}"></p:ajax>
