--- a/SIENI/SIENI-web/src/main/webapp/view/gestionCurso/gestionClase/claseVideoAlmacenada/configurarVideoTime.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/gestionCurso/gestionClase/claseVideoAlmacenada/configurarVideoTime.xhtml
@@ -10,7 +10,7 @@
             <p:menuitem value="Home" url="/"/>
             <p:menuitem value="Gestionar Curso" url="#"/>
             <p:menuitem value="Gestionar Clase" url="#"/>
-            <p:menuitem value="Consulta de Video-Clase Almacenada" url="#{siteUrls.claseVideoAlmacenada}"/>
+            <p:menuitem value="Consulta de Video-Clase Almacenada:#{gestionVideoClaseController.claseConfig.clTema}" url="#{siteUrls.claseVideoAlmacenada}"/>
             <p:separator />
         </p:breadCrumb>
     </ui:define>
@@ -27,6 +27,7 @@
                 <p:commandButton value="Si" action="#{gestionVideoClaseController.seccionInteractivaEliminad()}" oncomplete="PF('dlgEliminar').hide()"></p:commandButton>
                 <p:commandButton value="No" onclick="PF('dlgEliminar').hide();" ></p:commandButton>
             </p:dialog>
+            <p:outputLabel value="Curso: #{gestionVideoClaseController.claseConfig.idCurso.crNombre}"></p:outputLabel>
             <p:panelGrid columns="5" id="panelG">
                 <p:outputLabel value="Sección de plantilla"></p:outputLabel>
                 <p:selectOneMenu value="#{gestionVideoClaseController.nuevoPunto.idTipoElemPlantilla}" converter="tipoElemPlantilla">
