--- a/SIENI/SIENI-web/src/main/webapp/view/gestionCurso/gestionClase/claseVideoAlmacenada/ver.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/gestionCurso/gestionClase/claseVideoAlmacenada/ver.xhtml
@@ -10,7 +10,7 @@
             <p:menuitem value="Home" url="/"/>
             <p:menuitem value="Gestionar Curso" url="#"/>
             <p:menuitem value="Gestionar Clase" url="#"/>
-            <p:menuitem value="Consulta de Video-Clase Almacenada" url="#{siteUrls.claseVideoAlmacenada}"/>
+            <p:menuitem value="Consulta de Video-Clase Almacenada:#{gestionVideoClaseController.claseConfig.clTema}" url="#{siteUrls.claseVideoAlmacenada}"/>
             <p:separator />
         </p:breadCrumb>
     </ui:define>
@@ -21,6 +21,7 @@
             <script type="text/javascript">
                 #{gestionVideoClaseController.funcionJS}
             </script>
+            <p:outputLabel value="Curso: #{gestionVideoClaseController.claseConfig.idCurso.crNombre}"></p:outputLabel>
             <p:panel id="panelPpal">
                 <video id="videoPpal" controls="true" width="640px" height="480px" preload="true">
                     <source src="#{copiaArchivos.contexto}#{copiaArchivos.relativeResourcesUrl}#{gestionVideoClaseController.video.arRuta}?unico=#{dateUtils.time}" type="video/mp4" />
